Bug 93720 - [Qt] Fix failing assertions when using JSC C API in QObject bridge
Summary: [Qt] Fix failing assertions when using JSC C API in QObject bridge
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Hausmann
URL:
Keywords:
Depends on:
Blocks: 60842
  Show dependency treegraph
 
Reported: 2012-08-10 06:33 PDT by Simon Hausmann
Modified: 2012-08-10 06:41 PDT (History)
0 users

See Also:


Attachments
Patch (2.80 KB, patch)
2012-08-10 06:35 PDT, Simon Hausmann
kenneth: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Hausmann 2012-08-10 06:33:25 PDT
[Qt] Fix failing assertions when using JSC C API in QObject bridge
Comment 1 Simon Hausmann 2012-08-10 06:35:40 PDT
Created attachment 157730 [details]
Patch
Comment 2 Simon Hausmann 2012-08-10 06:41:07 PDT
Committed r125276: <http://trac.webkit.org/changeset/125276>